Remove unnecessary build args in example go app
The removed args solved a common static linking problem in old versions of go,
per https://github.com/golang/go/issues/9344#issuecomment-69944514

Signed-off-by: Alexander Else <aelse@else.id.au>

--- a/contrib/hello-finch/Dockerfile
+++ b/contrib/hello-finch/Dockerfile
@@ -2,7 +2,7 @@ FROM public.ecr.aws/docker/library/golang:1.19 AS builder
 WORKDIR /build
 COPY . .
 
-RUN CGO_ENABLED=0 go build -a -installsuffix cgo -ldflags '-extldflags "-static"' -o hello-finch .
+RUN CGO_ENABLED=0 go build -a -o hello-finch .
 
 FROM scratch
 COPY --from=builder /build/hello-finch /app/
