ci: clean up everything before each run (#30)
## Summary

Currently if a run is canceled midway, the environment is left untidied,
which may cause subsequent runs to fail. Take this
[run](https://github.com/runfinch/finch/actions/runs/3527869248/jobs/5917387104)
for example, `_output` was not cleaned up, so the run failed.

## License Acceptance

By submitting this pull request, I confirm that my contribution is made
under the terms of the Apache 2.0 license.

Signed-off-by: Hsing-Yu (David) Chen <davidhsingyuchen@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -88,6 +88,13 @@ jobs:
         run: |
           sudo rm -rf /opt/finch
           sudo rm -rf ~/.finch
+          sudo rm -rf ./_output
+          if pgrep '^qemu-system'; then
+            sudo pkill '^qemu-system'
+          fi
+          if pgrep '^socket_vmnet'; then
+            sudo pkill '^socket_vmnet'
+          fi
       - run: brew install go lz4 automake autoconf libtool 
       - name: Build project
         run: |
