--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -1,6 +1,12 @@
 # This file is created according to
 # https://docs.github.com/en/repositories/configuring-branches-and-merges-in-your-repository/defining-the-mergeability-of-pull-requests/troubleshooting-required-status-checks#handling-skipped-but-required-checks
 # As a result, the set of jobs in this file should be equal to that in ci.yaml.
+#
+# Note that if a PR contains changes of both markdown files and non-markdown files,
+# there'll be twins for each check (e.g., https://github.com/runfinch/finch/pull/88).
+# However, due to GitHub's logic, even though the one from ci-docs.yaml passes,
+# the one from ci.yaml still has to pass for the PR to be merged,
+# so it functionally works, while it's visually confusing.
 name: CI
 on:
   push:
