--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,9 +34,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          persist-credentials: false
       - uses: actions/setup-go@v3
         with:
           # Since this repository is not meant to be used as a library,
@@ -90,6 +87,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          # We need to get all the git tags to make version injection work. See VERSION in Makefile for more detail.
           fetch-depth: 0
           persist-credentials: false
       - name: Clean up previous files
