--- a/.github/workflows/release-installer.yaml
+++ b/.github/workflows/release-installer.yaml
@@ -2,6 +2,8 @@
 # When the installers are ready in installer private bucket, run this workflow to test them.
 # TODO: Add job of uploading installers to Github release when installer tests are stable.
 # "release" runner tag is to make target hosts deterministic for easy clean up.
+# This not only refers to the cleanup described in https://github.com/runfinch/finch/issues/106 for arm hosts.
+# Currently tests on amd64 hosts sometimes also need manual cleanup via SSHing to the host.
 # TODO: Remove the "release" runner tag when installer tests are stable.
 name: Release Installer
 on:
@@ -12,10 +14,15 @@ permissions:
   contents: read    # This is required for actions/checkout
 
 jobs:
-  # TODO: fix the arm64 test installer.
+  # TODO: fix the arm64 installer tests. (https://github.com/runfinch/finch/issues/106)
   # Currently the first time of calling any Finch command in arm64 hosts triggered by Github action will fail by
   # the error "Error: Process completed with exit code 137." So the arm64 job will fail.
   # We temporarily use follow-up manual steps to complete and clean up it.
+  # 1. Ssh to the arm64 hosts.
+  # 2. Run `cd ar/_work/finch/finch`.
+  # 3. Run `INSTALLED=true make test-e2e` to complete the installer e2e tests.
+  # 4. Run `sudo /Applications/Finch/uninstall.sh` to uninstall Finch.
+  # 5. Run `rm -rf Finch-<version>-aarch64.pkg` to delete the pkg.
   macos-arm64-test-installer:
     strategy:
       fail-fast: false
@@ -50,7 +57,8 @@ jobs:
         run: |
           aws s3 cp s3://${{ secrets.INSTALLER_PRIVATE_BUCKET_NAME }}/Finch-${GITHUB_REF_NAME}-aarch64.pkg Finch-${GITHUB_REF_NAME}-aarch64.pkg
       - name: Silently install
-        # Rosetta is only needed in arm64
+        # Rosetta is only needed in arm64. Currently the installer command will fail to install without Rosetta.
+        # TODO: Remove Rosetta command when the installer is fixed. (https://github.com/runfinch/finch/issues/105)
         run: |
           echo 'A' | sudo softwareupdate --install-rosetta
           sudo installer -pkg Finch-${GITHUB_REF_NAME}-aarch64.pkg -target /
