ci: add mdlint (#88)
## Summary

PR adds [markdownlint](https://github.com/DavidAnson/markdownlint) to CI
and Makefile. It ensures a consistent markdown style, and it also
provides some useful checks (e.g., [broken link
fragments](https://github.com/DavidAnson/markdownlint/blob/v0.26.2/doc/Rules.md#md051)).

## License Acceptance

By submitting this pull request, I confirm that my contribution is made
under the terms of the Apache 2.0 license.

Signed-off-by: Hsing-Yu (David) Chen <davidhsingyuchen@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,3 +108,12 @@ jobs:
           which libtool
           make
       - run: make test-e2e
+  mdlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: avto-dev/markdown-lint@v1
+        with:
+          args: '**/*.md'
+          # CHANGELOG.md is only updated by release-please bot.
+          ignore: 'CHANGELOG.md'
