fix: Configure Buildkit Namespace as Env Variable
The containerd-rootless-setup.sh script in nerdctl takes a
CONTAINERND_NAMESPACE variable when configuring the buildkit containerd worker
namespace. This variable is defined here in lima so that it is passed into the
containerd-rootless-setup.sh script, used by the CIDATA scripts while
provisioning the VM.

Signed-off-by: Olly Pomeroy <opomer@amazon.co.uk>

--- a/finch.yaml
+++ b/finch.yaml
@@ -185,3 +185,15 @@ video:
   # on performance on macOS hosts: https://gitlab.com/qemu-project/qemu/-/issues/334
   # 🟢 Builtin default: "none"
   display: null
+
+# Extra environment variables that will be loaded into the VM at start up.
+# These variables are consumed by internal init scripts, and also added
+# to /etc/environment.
+# If you set any of "ftp_proxy", "http_proxy", "https_proxy", or "no_proxy", then
+# Lima will automatically set an uppercase variant to the same value as well.
+# 🟢 Builtin default: null
+env:
+  # Containerd namespace is used by the lima cidata script
+  # 40-install-containerd.sh. Specifically this variable is defining the
+  # Buildkit Workers Containerd namespace. 
+  CONTAINERD_NAMESPACE: finch
