--- a/finch.yaml
+++ b/finch.yaml
@@ -81,6 +81,15 @@ mounts:
 # 🟢 Builtin default: "reverse-sshfs"
 mountType: reverse-sshfs
 
+# Lima disks to attach to the instance. The disks will be accessible from inside the
+# instance, labeled by name. (e.g. if the disk is named "data", it will be labeled
+# "lima-data" inside the instance). The disk will be mounted inside the instance at
+# `/mnt/lima-${VOLUME}`.
+# 🟢 Builtin default: null
+# For Finch, this value should always be the same as the diskName in pkg/disk/disk.go
+additionalDisks:
+- "finch"
+
 ssh:
   # A localhost port of the host. Forwarded to port 22 of the guest.
   # 🟢 Builtin default: 0 (automatically assigned to a free port)
@@ -136,13 +145,12 @@ provision:
     systemctl reset-failed NetworkManager-wait-online.service
     systemctl mask NetworkManager-wait-online.service
 # # `user` is executed without the root privilege
-# - mode: user
-#   script: |
-#     #!/bin/bash
-#     set -eux -o pipefail
-#     cat <<EOF > ~/.vimrc
-#     set number
-#     EOF
+- mode: user
+  script: |
+    #!/bin/bash
+    sudo chown $USER /mnt/lima-finch
+    sudo mount --bind /mnt/lima-finch ~/.local/share/containerd
+    systemctl --user restart containerd.service
 
 # Probe scripts to check readiness.
 # 🟢 Builtin default: null
