remove remote fork-repo on host before CIs
Signed-off-by: Anqi Pang <anqipans@amazon.com>

--- a/.github/workflows/release-homebrew.yaml
+++ b/.github/workflows/release-homebrew.yaml
@@ -58,6 +58,7 @@ jobs:
         run: |
           brew update-reset 
           cd $(brew --repo homebrew/cask)
+          git remote rm fork-repo || true
           git remote add fork-repo ${{ env.FORK_REPO }}
           git fetch fork-repo
           git checkout -B ${{ env.FORK_BRANCH }} fork-repo/${{ env.FORK_BRANCH }}
