--- a/.github/workflows/release-homebrew.yaml
+++ b/.github/workflows/release-homebrew.yaml
@@ -37,7 +37,9 @@ jobs:
     env:
       ACCESS_TOKEN: ${{ secrets.FINCH_BOT_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          ref: "v0.2.0"
       - name: Clean up previous files
         run: |
           sudo rm -rf /opt/finch
@@ -89,6 +91,8 @@ jobs:
       ACCESS_TOKEN: ${{ secrets.FINCH_BOT_TOKEN }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: "v0.2.0"
       - name: Clean up previous files
         run: |
           sudo rm -rf /opt/finch
