feat: add release-homebrew workflow
Signed-off-by: Anqi Pang <anqipans@amazon.com>

--- a/.github/workflows/release-installer.yaml
+++ b/.github/workflows/release-installer.yaml
@@ -27,7 +27,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [[self-hosted, macos, arm64, 11.7, release], [self-hosted, macos, arm64, 12.6, release], [self-hosted, macos, arm64, 13.0, release]]
+        os: [
+              [self-hosted, macos, arm64, 11.7, release], 
+              [self-hosted, macos, arm64, 12.6, release], 
+              [self-hosted, macos, arm64, 13.0, release]]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     env:
@@ -69,7 +72,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [[self-hosted, macos, amd64, 10.15, release], [self-hosted, macos, amd64, 11.7, release], [self-hosted, macos, amd64, 12.6, release], [self-hosted, macos, amd64, 13.0, release]]
+        os: [
+              [self-hosted, macos, amd64, 10.15, release], 
+              [self-hosted, macos, amd64, 11.7, release], 
+              [self-hosted, macos, amd64, 12.6, release], 
+              [self-hosted, macos, amd64, 13.0, release]]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     env:
