--- a/.github/workflows/release-installer.yaml
+++ b/.github/workflows/release-installer.yaml
@@ -30,7 +30,8 @@ jobs:
         os: [
               [self-hosted, macos, arm64, 11.7, release], 
               [self-hosted, macos, arm64, 12.6, release], 
-              [self-hosted, macos, arm64, 13.0, release]]
+              [self-hosted, macos, arm64, 13.0, release]
+            ]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     env:
@@ -76,7 +77,8 @@ jobs:
               [self-hosted, macos, amd64, 10.15, release], 
               [self-hosted, macos, amd64, 11.7, release], 
               [self-hosted, macos, amd64, 12.6, release], 
-              [self-hosted, macos, amd64, 13.0, release]]
+              [self-hosted, macos, amd64, 13.0, release]
+            ]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     env:
