--- a/.github/workflows/upload-installer-to-release.yaml
+++ b/.github/workflows/upload-installer-to-release.yaml
@@ -4,11 +4,12 @@ on:
 
 permissions:
   id-token: write   # This is required for requesting the JWT
-  contents: read    # This is required for actions/checkout
 
 jobs:         
   upload-installers:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
