--- a/.github/workflows/upload-build-to-s3.yaml
+++ b/.github/workflows/upload-build-to-s3.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: finch.macos-aarch64
-          path: finch.${GITHUB_REF_NAME}.aarch64.tar.gz
+          path: finch.*.aarch64.tar.gz
           if-no-files-found: error
 
   macos-x86_64-build:
@@ -65,7 +65,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: finch.macos-x86_64
-          path: finch.${GITHUB_REF_NAME}.x86_64.tar.gz
+          path: finch.*.x86_64.tar.gz
           if-no-files-found: error
 
   release:
