--- a/finch.yaml
+++ b/finch.yaml
@@ -148,14 +148,26 @@ provision:
 - mode: user
   script: |
     #!/bin/bash
+    # We need create /etc/nerdctl directory as root and make it writeable by non root user because the sftp client in https://github.com/runfinch/finch/blob/main/pkg/config/nerdctl_config_applier.go#L140 cannot run as root.
     sudo mkdir -p /etc/nerdctl
     sudo chown $USER /etc/nerdctl
     sudo chmod 755 /root/
     sudo chown $USER /root/.bashrc
     sudo chown $USER /mnt/lima-finch
+
+    # https://github.com/containerd/nerdctl/blob/main/docs/dir.md#dataroot
+    sudo mkdir -p /mnt/lima-finch/nerdctl /var/lib/nerdctl
+    sudo mount --bind /mnt/lima-finch/nerdctl /var/lib/nerdctl
+
+    # https://github.com/containerd/nerdctl/blob/main/docs/dir.md#netconfpath
+    sudo mkdir -p /mnt/lima-finch/cni-config /etc/cni/
+    sudo mount --bind /mnt/lima-finch/cni-config /etc/cni/
+
     sudo mkdir -p /var/lib/containerd
     sudo mount --bind /mnt/lima-finch /var/lib/containerd
+
     sudo systemctl restart containerd.service  
+
 
 # Probe scripts to check readiness.
 # 🟢 Builtin default: null
