--- a/finch.yaml
+++ b/finch.yaml
@@ -155,7 +155,7 @@ provision:
     
     # This code mounts /mnt/lima-finch to both rootless and rootful dataroots to enable rootless container startup within the rootful vm configuration.
     # https://github.com/containerd/containerd/blob/main/docs/ops.md#base-configuration
-    sudo mkdir -p /var/lib/containerd
+    sudo mkdir -p /mnt/lima-finch/containerd /var/lib/containerd
     sudo mount --bind /mnt/lima-finch/containerd /var/lib/containerd
     mkdir ~/.local/share/containerd
     sudo mount --bind /mnt/lima-finch/containerd ~/.local/share/containerd
